Fix overflow, for real this time

--- a/assets/stylesheets/less/style.less
+++ b/assets/stylesheets/less/style.less
@@ -51,6 +51,7 @@ strong {
   background-color: @bodyBackgroundColor;
   margin-bottom: @gridGutterWidth;
   min-height: 100%;
+  overflow-x: hidden;
   .clearfix();
 }
 .container {
@@ -67,7 +68,6 @@ strong {
   height: 100%;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, .25);
   width: 100%;
-  .clearfix();
   .container {
     height: 100%;
   }
